@@ -1,0 +1,129 @@
+<refentry xmlns="http://docbook.org/ns/docbook" version="5.0" xml:id="search1">
+
+  <refmeta>
+    <refentrytitle>GDIFF</refentrytitle>
+    <manvolnum>nged</manvolnum>
+    <refmiscinfo class="source">BRL-CAD</refmiscinfo>
+    <refmiscinfo class="manual">BRL-CAD User Commands</refmiscinfo>
+  </refmeta>
+
+  <refnamediv xml:id="name">
+    <refname>gdiff</refname>
+    <refpurpose>
+      a BRL-CAD differential geometry comparator
+    </refpurpose>
+  </refnamediv>
+
+  <!-- body begins here -->
+  <refsynopsisdiv xml:id="synopsis">
+    <cmdsynopsis sepchar=" ">
+      <command>gdiff</command>
+      <arg choice="opt" rep="repeat"><replaceable>options</replaceable></arg>
+      <arg choice="plain"><replaceable>left_object</replaceable></arg>
+      <arg choice="plain"><replaceable>right_object</replaceable></arg>
+    </cmdsynopsis>
+  </refsynopsisdiv>
+
+  <refsection xml:id="description"><title>DESCRIPTION</title>
+
+    <para>
+      <command>gdiff</command> compares BRL-CAD geometry objects using
+      LIBRT's solid raytracing capabilities and visualizes differences in
+      the display manager.
+    </para>
+
+    <para>
+      Red segments are those generated only from intersections with the <emphasis>left_obj</emphasis>
+      object while blue segments represent intersections unique to the <emphasis>right_obj</emphasis>
+      object.  White segments represent intersections common to both objects. By default, only segments
+      unique to the left and/or right objects are displayed.
+    </para>
+
+    <para>
+      Users will want to pay careful attention to specifying tolerances - it is
+      a good idea to use the <command>bb</command> command to get a sense of the
+      size of the objects to be raytraced before specifying a gdiff command. If
+      no tolerance is given a default of 100mm is used, but depending on the size
+      of the objects to be raytraced this may be either far too large or so small
+      as to make raytracing costs prohibitive.
+    </para>
+
+  </refsection>
+
+  <refsection xml:id="gdiff_mged_options"><title>OPTIONS</title>
+
+    <variablelist remap="TP">
+      <varlistentry>
+	<term><emphasis remap="B" role="bold">-h</emphasis></term>
+	<listitem>
+	  <para>
+	    Prints help.
+	  </para>
+	</listitem>
+      </varlistentry>
+      <varlistentry>
+	<term><emphasis remap="B" role="bold">-t #</emphasis></term>
+	<listitem>
+	  <para>
+	    Specify a tolerance in millimeters.
+	  </para>
+	</listitem>
+      </varlistentry>
+      <varlistentry>
+	<term><emphasis remap="B" role="bold">-l</emphasis></term>
+	<listitem>
+	  <para>
+	    Visualize solid segments occurring only in the left object.
+	  </para>
+	</listitem>
+      </varlistentry>
+      <varlistentry>
+	<term><emphasis remap="B" role="bold">-r</emphasis></term>
+	<listitem>
+	  <para>
+	    Visualize solid segments occurring only in the right object.
+	  </para>
+	</listitem>
+      </varlistentry>
+      <varlistentry>
+	<term><emphasis remap="B" role="bold">-b</emphasis></term>
+	<listitem>
+	  <para>
+	    Visualize solid segments occurring in both the left and right object (i.e. common or shared volume).
+	  </para>
+	</listitem>
+      </varlistentry>
+      <varlistentry>
+	<term><emphasis remap="B" role="bold">-G</emphasis></term>
+	<listitem>
+	  <para>
+	    Report differences in grazing hits.  By default, differences are reported only when they can be
+	    verified by shooting parallel rays offset around the original shotline reporting a difference.
+	    This options disables that filter.
+	  </para>
+	</listitem>
+      </varlistentry>
+    </variablelist>
+
+  </refsection>
+
+  <refsection xml:id="author"><title>AUTHOR</title>
+    <para>Clifford Yapp</para>
+  </refsection>
+
+  <refsection xml:id="copyright"><title>COPYRIGHT</title>
+    <para>
+      This software is Copyright (c) 2016 United States Government as
+      represented by the U.S. Army Research Laboratory.
+    </para>
+  </refsection>
+
+  <refsection xml:id="bug_reports"><title>BUG REPORTS</title>
+    <para>
+      Reports of bugs or problems should be submitted via electronic
+      mail to &lt;devs@brlcad.org&gt;, or via the "cadbug.sh" script.
+    </para>
+  </refsection>
+</refentry>
+
+<!-- vim: set shiftwidth=2 : -->
